feat: Flood protection model/API/Admin
